fix control panel stretching

--- a/src/components/ControlPanel.css
+++ b/src/components/ControlPanel.css
@@ -9,6 +9,7 @@
   overflow-x: hidden;
   display: flex;
   flex-flow: row wrap;
+  align-content: flex-start;
 }
 
 .Control {
